[ADD] Change theme from dark to light and change the title

--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Atlantis</title>
+    <title>Cablemas - Admin</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <!-- Layout CSS -->
-    <link id="theme-css" rel="stylesheet" type="text/css" href="assets/theme/blue/theme-dark.css">
-    <link id="layout-css" rel="stylesheet" type="text/css" href="assets/layout/css/blue/layout-dark.css">
+    <link id="theme-css" rel="stylesheet" type="text/css" href="assets/theme/blue/theme-light.css">
+    <link id="layout-css" rel="stylesheet" type="text/css" href="assets/layout/css/blue/layout-light.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"
             integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ=="
             crossorigin="anonymous"></script>
